# free-form-action-conditioning

./: .gitignore  AGENTS.md  README.md  astro.config.mjs  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/: conditioned_latent_prediction_design_space.md  tepa_dataset_generation.md  tepa_evaluation.md  three_seed_model_comparison.md
experiments/puck_world/: README.md  pyproject.toml
experiments/puck_world/configs/: condition_json_phase1.yaml  counterfactual_eval_json.yaml  phase1_json_latent_context_aux.yaml  phase1_json_latent_context_aux_condition_finetune.yaml  phase1_structured.yaml  sanity_json_exact.yaml  sanity_json_exact_latent_context_aux.yaml  sanity_json_exact_latent_focus.yaml  smoke.yaml  smoke_context_memory.yaml
experiments/puck_world/src/tepa_eval/: __init__.py  analyze_counterfactuals.py  benchmark_counterfactuals.py  compare_seeds.py  conditions.py  dataset.py  engine.py  evaluate.py  generate.py  hashing.py  identifiability.py  io.py  metrics.py  models.py  schemas.py  simulator.py  storage.py  train.py  train_condition.py  train_target.py  trajectory.py  validate_data.py
experiments/puck_world/tests/: test_generation_dataset_models.py  test_hashing_and_conditions.py  test_simulator_and_storage.py
src/components/: Callout.astro  GeneratedDiagram.astro
src/data/: diagrams.ts
src/layouts/: Layout.astro
src/pages/: index.astro  tepa.astro
